--- a/01-intro/intro 01.ipynb
+++ b/01-intro/intro 01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "660b8b0f-c96f-4e1a-bf97-637f27a18028",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.3.2\n"
+      "2.2.3\n"
      ]
     }
    ],
@@ -21,36 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ef3d012c-44f8-4a7e-bf0d-ff8a2832e86d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2025-09-23 01:32:44--  https://raw.githubusercontent.com/alexeygrigorev/datasets/master/car_fuel_efficiency.csv\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 874188 (854K) [text/plain]\n",
-      "Saving to: ‘car_fuel_efficiency.csv.1’\n",
-      "\n",
-      "car_fuel_efficiency 100%[===================>] 853.70K  --.-KB/s    in 0.02s   \n",
-      "\n",
-      "2025-09-23 01:32:44 (36.0 MB/s) - ‘car_fuel_efficiency.csv.1’ saved [874188/874188]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### download dataset\n",
-    "!wget 'https://raw.githubusercontent.com/alexeygrigorev/datasets/master/car_fuel_efficiency.csv'"
+    "# !wget 'https://raw.githubusercontent.com/alexeygrigorev/datasets/master/car_fuel_efficiency.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5ae5fd3c-6c0a-40c1-abaf-8a962229ac07",
    "metadata": {},
    "outputs": [
@@ -70,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d90c0ff2-ba56-43ba-952e-dd5ecdce8c61",
    "metadata": {},
    "outputs": [
@@ -206,7 +188,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d807b333-cd11-4545-9836-2ceb70a2ddc9",
    "metadata": {},
    "outputs": [
@@ -227,7 +209,7 @@
        "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f826792a-25e7-45fc-8bbb-c8b61cc34376",
    "metadata": {},
    "outputs": [
@@ -267,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "38c356ce-8efe-4197-9997-a53a8636e0ce",
    "metadata": {},
    "outputs": [
@@ -278,7 +260,7 @@
        "Name: fuel_efficiency_mpg, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "0c0db12d-2a85-4a3f-94c6-de2210e7ba22",
    "metadata": {},
    "outputs": [
@@ -309,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "4082751e-42aa-4292-9ee9-218632ad1964",
    "metadata": {},
    "outputs": [
@@ -339,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "73ca64ab-6337-40cc-b0b6-eae197fc332c",
    "metadata": {},
    "outputs": [],
@@ -349,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "2390f818-e0b6-42e4-8cf9-c50caaf7b02a",
    "metadata": {},
    "outputs": [
@@ -359,7 +341,7 @@
        "np.float64(149.82821516900248)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "3f567cbb-f061-4bf2-a177-98c4310caa2d",
    "metadata": {},
    "outputs": [],
@@ -381,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "e12916e4-72d1-457a-9d1f-4893674940f9",
    "metadata": {},
    "outputs": [
@@ -461,7 +443,7 @@
        "38     3761.994038        2019"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "272984cd-75de-45e3-b844-83d29c8e8b05",
    "metadata": {},
    "outputs": [],
@@ -483,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "f907c909-7325-4015-b5ad-0257c53bfa89",
    "metadata": {},
    "outputs": [
@@ -499,7 +481,7 @@
        "       [3761.99403819, 2019.        ]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "0cd0fe17-5e87-430b-9aff-7d62a43b580e",
    "metadata": {},
    "outputs": [],
@@ -520,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "00326d35-265c-4f05-92b6-d6541c8fa133",
    "metadata": {},
    "outputs": [],
@@ -530,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "37d76750-6e27-46e7-86aa-86774f12b893",
    "metadata": {},
    "outputs": [],
@@ -540,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "id": "7ac4d799-8680-43a3-974d-a623c8e986bd",
    "metadata": {},
    "outputs": [],
@@ -550,17 +532,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "id": "94ac2ac9-aaef-45c5-9531-8bc7c9d5ea61",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(3298448781674859.5)"
+       "np.float64(0.5187709081074016)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +562,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -594,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
